--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 
 /* Base */
+
 a,
 .btn-link {
 	color: #c52d2f;
@@ -983,4 +984,11 @@ html.dark .wizard-progress .wizard-steps li.active a span {
 	background: rgb(246, 246, 246);
     border-radius: 6px 6px 0px 0px;
     border-bottom: 1px solid rgb(218, 218, 218);
+}
+
+
+.testimonial-wrap{
+    height: 256px;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
